# tctiSH

./: .gitattributes  .gitignore  .gitmodules  LICENSE  LICENSE.md  Podfile  README.md  build_dependencies.sh  flake.nix
assets/: .gitignore  build_qemu.sh  build_tcti.sh  dev_ramdisk.sh  empty.qcow  initrd.img  make_ramdisk.sh  memory_state.qcow  start_qemu.sh  start_tcti.sh  x86_64_tctish_defconfig
assets/placeholder_keys/: placeholder_key  placeholder_key.pub
assets/scripts/: mount.ios  tctish-load-snapshot  tctish-management-console  tctish-mount  tctish-restore-mounts  tctish-take-snapshot
tctiSH/: AppDelegate.swift  ConfigServer.swift  Info.plist  Picker.swift  QEMU.swift  QEMULauncher.swift  TerminalView.swift  Theming.swift  UIKitSshTerminalView.swift  ViewController.swift  qemu_launcher.c  qemu_launcher.h  tctiSH-Bridging-Header.h  tctiSH.entitlements
tctiSH.xcodeproj/: project.pbxproj
tctiSH.xcodeproj/project.xcworkspace/xcuserdata/ara.xcuserdatad/: UserInterfaceState.xcuserstate
tctiSH.xcworkspace/: contents.xcworkspacedata
tctiSH.xcworkspace/xcshareddata/swiftpm/: Package.resolved
tctiSH.xcworkspace/xcuserdata/ara.xcuserdatad/: UserInterfaceState.xcuserstate
tctiSH.xcworkspace/xcuserdata/ktemkin.xcuserdatad/: UserInterfaceState.xcuserstate
tctiSH/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
tctiSH/Settings.bundle/: Root.plist
utils/: README.md
utils/tctictl/: Cargo.toml  build_and_copy.sh
utils/tctictl/src/: comms.rs  main.rs  mount.rs  simple.rs  ui.rs
(+3 files in other folders)
