[package]
name = "tctictl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
clap = { version = "3.2.20", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"

[profile.release]
strip=true
lto=true
